# scraperator

./: .gitignore  README.md  audible_api.md  audible_search_api.md  example_usage.py  pyproject.toml  requirements.txt  shopping-feed-improvement-plan.md
.ai-docs/python/: beautifulsoup4.md  dynamorator.md  ghostscraper.md  logorator.md
data/ghostscraper/: https-www-audible-fr-pd-b0fw58j539-overridebasecountry-true-ipredirectoverride-true.json  https-www-audible-fr-pd-b0fw58j539.json
scraperator/: __init__.py  amazon_author.py  audible_author.py  audible_product.py  audible_product_scraper.py  audible_search.py  base_scraper.py  browser_installer.py  example_usage.py  markdown_converter.py  playwright_scraper.py  request_scraper.py  scraped_model.py  scraper.py  scraperator.py  types.py
test_scripts/: list_tables.py  test_ac_url.py  test_audible_product.py
tests/: test_audible_product_smoke.py  test_sims_smoke.py
