[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraperator"
version = "0.1.3"
description = "ScrapedModel base class and Audible/Amazon scrapers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghostscraper",
    "dynamorator",
    "logorator"
]

[project.optional-dependencies]
audible = [
    "beautifulsoup4",
]
amazon = [
    "beautifulsoup4",
    "boto3",
    "httpx",
    "Pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scraperator*"]
