[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraperator"
version = "0.2.0"
description = "ScrapedModel base class and Audible/Amazon scrapers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynamorator",
    "logorator",
    "httpx",
]

[project.optional-dependencies]
audible-scraper = [
    "beautifulsoup4",
    "ghostscraper",
]
amazon = [
    "beautifulsoup4",
    "boto3",
    "httpx",
    "Pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scraperator*"]
